--- a/config.env
+++ b/config.env
@@ -1,12 +1,12 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/xiaoleGun/android_kernel_xiaomi_wayne-4.19
-KERNEL_SOURCE_BRANCH=twrp-12
-KERNEL_CONFIG=vendor/wayne_defconfig
-KERNEL_IMAGE_NAME=Image.gz-dtb
+KERNEL_SOURCE=https://github.com/bxySo/android_kernel_xiaomi_sm8250
+KERNEL_SOURCE_BRANCH=lineage-21
+KERNEL_CONFIG=alioth_defconfig
+KERNEL_IMAGE_NAME=Image
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
-EXTRA_CMDS:LD=ld.lld
+EXTRA_CMDS:LD=ld.lld LLVM=1 LLVM_IAS=1
 
 # Clang
 ## Custom
@@ -18,12 +18,12 @@ CUSTOM_CLANG_BRANCH=
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 
 ## AOSP
-CLANG_BRANCH=master-kernel-build-2022
-CLANG_VERSION=r450784e
+CLANG_BRANCH=master
+CLANG_VERSION=r498229b
 
 # GCC
 ENABLE_GCC_ARM64=true
-ENABLE_GCC_ARM32=true
+ENABLE_GCC_ARM32=false
 USE_CUSTOM_GCC_64=false
 CUSTOM_GCC_64_SOURCE=
 CUSTOM_GCC_64_BRANCH=
@@ -34,7 +34,7 @@ CUSTOM_GCC_32_BRANCH=
 CUSTOM_GCC_32_BIN=arm-linux-androideabi-
 
 # KernelSU flags
-ENABLE_KERNELSU=false
+ENABLE_KERNELSU=true
 KERNELSU_REPO=tiann/KernelSU
 KERNELSU_TAG=v0.9.5
 KSU_EXPECTED_SIZE=
@@ -45,7 +45,7 @@ DISABLE-LTO=false
 DISABLE_CC_WERROR=false
 ADD_KPROBES_CONFIG=false
 ADD_OVERLAYFS_CONFIG=false
-APPLY_KSU_PATCH=false
+APPLY_KSU_PATCH=true
 REMOVE_UNUSED_PACKAGES=false
 EXTRA_ENV=false
 
