feat: Add `EXTRA_ENV` optional
* You can configure more environments before compiling the kernel.
  The workflow copies all files/folders in the env folder to the kernel root as is.
- Disable by default

---

env: Add `mkdtboimg.py` from AOSP

- From: https://android.googlesource.com/platform/system/libufdt/+/refs/heads/android14-release/utils/src/mkdtboimg.py
- Path: scripts/ufdt/libufdt/utils/src/mkdtboimg.py

  ...
  DTBOIMG arch/arm64/boot/dtbo.img
python2: can't open file '../scripts/ufdt/libufdt/utils/src/mkdtboimg.py': [Errno 2] No such file or directory
make[2]: *** [../arch/arm64/boot/Makefile:74: arch/arm64/boot/dtbo.img] Error 2
make[1]: *** [arch/arm64/Makefile:191: dtbo.img] Error 2
make[1]: *** Waiting for unfinished jobs....

--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -54,6 +54,7 @@ jobs:
             KSU_EXPECTED_SIZE
             KSU_EXPECTED_HASH
             REMOVE_UNUSED_PACKAGES
+            EXTRA_ENV
         )
 
         for CONFIG in "${CONFIG_LIST[@]}"; do
@@ -192,6 +193,9 @@ jobs:
     - name: Setup Configuration for Kernel
       run: |
         cd $GITHUB_WORKSPACE/kernel_workspace/android-kernel
+        if [ ${{ env.EXTRA_ENV }} = true ]; then
+            cp -r $GITHUB_WORKSPACE/env/* .
+        fi
         if [ ${{ env.APPLY_KSU_PATCH }} = true ]; then
             bash $GITHUB_WORKSPACE/patches/patches.sh
             if grep -q "CONFIG_KSU" arch/${{ env.ARCH }}/configs/${{ env.KERNEL_CONFIG }}; then
