--- a/config.env
+++ b/config.env
@@ -46,6 +46,7 @@ ADD_KPROBES_CONFIG=false
 ADD_OVERLAYFS_CONFIG=false
 APPLY_KSU_PATCH=false
 REMOVE_UNUSED_PACKAGES=false
+EXTRA_ENV=false
 
 # AnyKernel3
 ## AnyKernel3 Custom
