--- a/config.env
+++ b/config.env
@@ -35,6 +35,7 @@ CUSTOM_GCC_32_BIN=arm-linux-androideabi-
 
 # KernelSU flags
 ENABLE_KERNELSU=false
+KERNELSU_REPO=tiann/KernelSU
 KERNELSU_TAG=v0.9.5
 KSU_EXPECTED_SIZE=
 KSU_EXPECTED_HASH=
