--- a/config.env
+++ b/config.env
@@ -35,8 +35,8 @@ CUSTOM_GCC_32_BIN=arm-linux-androideabi-
 
 # KernelSU flags
 ENABLE_KERNELSU=true
-KERNELSU_REPO=tiann/KernelSU
-KERNELSU_TAG=v0.9.5
+KERNELSU_REPO=lightsummer233/KernelSU
+KERNELSU_TAG=main
 KSU_EXPECTED_SIZE=
 KSU_EXPECTED_HASH=
 
