--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/PocoF3Releases/kernel_xiaomi_sm8250
+KERNEL_SOURCE=https://github.com/bxySo/android_kernel_xiaomi_sm8250
 KERNEL_SOURCE_BRANCH=aosp-14
 KERNEL_CONFIG=alioth_defconfig
 KERNEL_IMAGE_NAME=Image
@@ -35,8 +35,8 @@ CUSTOM_GCC_32_BIN=arm-linux-androideabi-
 
 # KernelSU flags
 ENABLE_KERNELSU=true
-KERNELSU_REPO=tiann/KernelSU
-KERNELSU_TAG=v0.9.5
+KERNELSU_REPO=lightsummer233/KernelSU
+KERNELSU_TAG=main
 KSU_EXPECTED_SIZE=
 KSU_EXPECTED_HASH=
 
