--- a/config.env
+++ b/config.env
@@ -51,9 +51,9 @@ EXTRA_ENV=true
 
 # AnyKernel3
 ## AnyKernel3 Custom
-USE_CUSTOM_ANYKERNEL3=false
-CUSTOM_ANYKERNEL3_SOURCE=
-CUSTOM_ANYKERNEL3_BRANCH=
+USE_CUSTOM_ANYKERNEL3=true
+CUSTOM_ANYKERNEL3_SOURCE=https://github.com/madmax7896/AnyKernel3
+CUSTOM_ANYKERNEL3_BRANCH=alioth
 
 # Ccache
 ENABLE_CCACHE=true
