config: Enable `EXTRA_ENV`

--- a/config.env
+++ b/config.env
@@ -47,7 +47,7 @@ ADD_KPROBES_CONFIG=false
 ADD_OVERLAYFS_CONFIG=false
 APPLY_KSU_PATCH=false
 REMOVE_UNUSED_PACKAGES=false
-EXTRA_ENV=false
+EXTRA_ENV=true
 
 # AnyKernel3
 ## AnyKernel3 Custom
