--- a/config.env
+++ b/config.env
@@ -10,8 +10,8 @@ EXTRA_CMDS:LD=ld.lld LLVM=1 LLVM_IAS=1
 
 # Clang
 ## Custom
-USE_CUSTOM_CLANG=false
-CUSTOM_CLANG_SOURCE=
+USE_CUSTOM_CLANG=true
+CUSTOM_CLANG_SOURCE=$(curl -LSs https://raw.githubusercontent.com/ZyCromerZ/Clang/main/Clang-main-link.txt)
 CUSTOM_CLANG_BRANCH=
 
 ### if your set USE CUSTOM CLANG to false than DO NOT CHANGE CUSTOM CMDS
