--- a/config.env
+++ b/config.env
@@ -1,29 +1,29 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/xiaoleGun/android_kernel_xiaomi_wayne-4.19
-KERNEL_SOURCE_BRANCH=twrp-12
-KERNEL_CONFIG=vendor/wayne_defconfig
-KERNEL_IMAGE_NAME=Image.gz-dtb
+KERNEL_SOURCE=https://github.com/AOSPA/android_kernel_xiaomi_sm8250
+KERNEL_SOURCE_BRANCH=uvite
+KERNEL_CONFIG=vendor/alioth_defconfig
+KERNEL_IMAGE_NAME=Image
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
-EXTRA_CMDS:LD=ld.lld
+EXTRA_CMDS:LD=ld.lld LLVM=1 LLVM_IAS=1
 
 # Clang
 ## Custom
-USE_CUSTOM_CLANG=false
-CUSTOM_CLANG_SOURCE=
+USE_CUSTOM_CLANG=true
+CUSTOM_CLANG_SOURCE=$(curl -LSs https://raw.githubusercontent.com/ZyCromerZ/Clang/main/Clang-main-link.txt)
 CUSTOM_CLANG_BRANCH=
 
 ### if your set USE CUSTOM CLANG to false than DO NOT CHANGE CUSTOM CMDS
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 
 ## AOSP
-CLANG_BRANCH=master-kernel-build-2022
-CLANG_VERSION=r450784e
+CLANG_BRANCH=master
+CLANG_VERSION=r536225
 
 # GCC
 ENABLE_GCC_ARM64=true
-ENABLE_GCC_ARM32=true
+ENABLE_GCC_ARM32=false
 USE_CUSTOM_GCC_64=false
 CUSTOM_GCC_64_SOURCE=
 CUSTOM_GCC_64_BRANCH=
@@ -34,9 +34,9 @@ CUSTOM_GCC_32_BRANCH=
 CUSTOM_GCC_32_BIN=arm-linux-androideabi-
 
 # KernelSU flags
-ENABLE_KERNELSU=false
-KERNELSU_REPO=tiann/KernelSU
-KERNELSU_TAG=v0.9.5
+ENABLE_KERNELSU=true
+KERNELSU_REPO=lightsummer233/KernelSU
+KERNELSU_TAG=main
 KSU_EXPECTED_SIZE=
 KSU_EXPECTED_HASH=
 
@@ -45,7 +45,7 @@ DISABLE-LTO=false
 DISABLE_CC_WERROR=false
 ADD_KPROBES_CONFIG=false
 ADD_OVERLAYFS_CONFIG=false
-APPLY_KSU_PATCH=false
+APPLY_KSU_PATCH=true
 REMOVE_UNUSED_PACKAGES=false
 EXTRA_ENV=false
 
