--- a/config.env
+++ b/config.env
@@ -60,3 +60,7 @@ ENABLE_CCACHE=true
 
 # DTBO image
 NEED_DTBO=false
+
+# Build boot images
+BUILD_BOOT_IMG=false
+SOURCE_BOOT_IMAGE=https://raw.githubusercontent.com/xiaoleGun/KernelSU_action/main/boot/boot.img
