config: Switch to the N0 kernel for alioth
* For Redmi K40 / POCO F3 / Mi 11x (alioth)

--- a/config.env
+++ b/config.env
@@ -1,12 +1,12 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/xiaoleGun/android_kernel_xiaomi_wayne-4.19
-KERNEL_SOURCE_BRANCH=twrp-12
-KERNEL_CONFIG=vendor/wayne_defconfig
-KERNEL_IMAGE_NAME=Image.gz-dtb
+KERNEL_SOURCE=https://github.com/EmanuelCN/kernel_xiaomi_sm8250
+KERNEL_SOURCE_BRANCH=staging
+KERNEL_CONFIG=vendor/alioth_defconfig
+KERNEL_IMAGE_NAME=Image
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
-EXTRA_CMDS:LD=ld.lld
+EXTRA_CMDS:LD=ld.lld LLVM=1 LLVM_IAS=1
 
 # Clang
 ## Custom
@@ -23,7 +23,7 @@ CLANG_VERSION=r450784e
 
 # GCC
 ENABLE_GCC_ARM64=true
-ENABLE_GCC_ARM32=true
+ENABLE_GCC_ARM32=false
 USE_CUSTOM_GCC_64=false
 CUSTOM_GCC_64_SOURCE=
 CUSTOM_GCC_64_BRANCH=
@@ -34,7 +34,7 @@ CUSTOM_GCC_32_BRANCH=
 CUSTOM_GCC_32_BIN=arm-linux-androideabi-
 
 # KernelSU flags
-ENABLE_KERNELSU=false
+ENABLE_KERNELSU=true
 KERNELSU_REPO=tiann/KernelSU
 KERNELSU_TAG=v0.9.5
 KSU_EXPECTED_SIZE=
