CI: Include dtb file when use custom ak3
- Commands from: https://github.com/AOSPA/android_kernel_xiaomi_sm8250/blob/2cf63368e7d8e4392f31f15d0403e9d48e743b11/build.sh#L106

--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -330,6 +330,11 @@ jobs:
         if [ ${{ env.CHECK_DTBO_IS_OK }} = true ]; then
             cp android-kernel/out/arch/${{ env.ARCH }}/boot/dtbo.img AnyKernel3/
         fi
+        if [ ! -f android-kernel/out/arch/${{ env.ARCH }}/boot/dtb ]; then
+            dts_source=arch/${{ env.ARCH }}/boot/dts/vendor/qcom
+            find android-kernel/out/$dts_source -name '*.dtb' -exec cat {} + >android-kernel/out/arch/${{ env.ARCH }}/boot/dtb
+        fi
+        cp android-kernel/out/arch/${{ env.ARCH }}/boot/dtb AnyKernel3/
         rm -rf AnyKernel3/.git* AnyKernel3/README.md
 
     - name: Make boot image
