--- a/config.env
+++ b/config.env
@@ -59,7 +59,7 @@ CUSTOM_ANYKERNEL3_BRANCH=alioth
 ENABLE_CCACHE=true
 
 # DTBO image
-NEED_DTBO=false
+NEED_DTBO=true
 
 # Build boot images
 BUILD_BOOT_IMG=false
