config: Update AnyKernel3 source url
- https://github.com/bxySo/AnyKernel3

--- a/config.env
+++ b/config.env
@@ -52,7 +52,7 @@ EXTRA_ENV=true
 # AnyKernel3
 ## AnyKernel3 Custom
 USE_CUSTOM_ANYKERNEL3=true
-CUSTOM_ANYKERNEL3_SOURCE=https://github.com/madmax7896/AnyKernel3
+CUSTOM_ANYKERNEL3_SOURCE=https://github.com/bxySo/AnyKernel3
 CUSTOM_ANYKERNEL3_BRANCH=alioth
 
 # Ccache
