--- a/config.env
+++ b/config.env
@@ -36,7 +36,7 @@ CUSTOM_GCC_32_BIN=arm-linux-androideabi-
 # KernelSU flags
 ENABLE_KERNELSU=true
 KERNELSU_REPO=lightsummer233/KernelSU
-KERNELSU_TAG=main
+KERNELSU_TAG=non-gki
 KSU_EXPECTED_SIZE=
 KSU_EXPECTED_HASH=
 
