config: Switch to the Oxygen kernel for alioth
* For Redmi K40 / POCO F3 (alioth) & Mi 11X (aliothin)

--- a/config.env
+++ b/config.env
@@ -1,17 +1,17 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/xiaoleGun/android_kernel_xiaomi_wayne-4.19
-KERNEL_SOURCE_BRANCH=twrp-12
-KERNEL_CONFIG=vendor/wayne_defconfig
-KERNEL_IMAGE_NAME=Image.gz-dtb
+KERNEL_SOURCE=https://github.com/Danda420/kernel_xiaomi_sm8250
+KERNEL_SOURCE_BRANCH=main
+KERNEL_CONFIG=vendor/alioth_defconfig
+KERNEL_IMAGE_NAME=Image
 ARCH=arm64
-ADD_LOCALVERSION_TO_FILENAME=false
-EXTRA_CMDS:LD=ld.lld
+ADD_LOCALVERSION_TO_FILENAME=true
+EXTRA_CMDS:LD=ld.lld LLVM=1 LLVM_IAS=1
 
 # Clang
 ## Custom
-USE_CUSTOM_CLANG=false
-CUSTOM_CLANG_SOURCE=
+USE_CUSTOM_CLANG=true
+CUSTOM_CLANG_SOURCE=$(curl -LSs https://raw.githubusercontent.com/ZyCromerZ/Clang/main/Clang-main-link.txt)
 CUSTOM_CLANG_BRANCH=
 
 ### if your set USE CUSTOM CLANG to false than DO NOT CHANGE CUSTOM CMDS
@@ -23,7 +23,7 @@ CLANG_VERSION=r450784e
 
 # GCC
 ENABLE_GCC_ARM64=true
-ENABLE_GCC_ARM32=true
+ENABLE_GCC_ARM32=false
 USE_CUSTOM_GCC_64=false
 CUSTOM_GCC_64_SOURCE=
 CUSTOM_GCC_64_BRANCH=
@@ -34,9 +34,9 @@ CUSTOM_GCC_32_BRANCH=
 CUSTOM_GCC_32_BIN=arm-linux-androideabi-
 
 # KernelSU flags
-ENABLE_KERNELSU=false
-KERNELSU_REPO=tiann/KernelSU
-KERNELSU_TAG=v0.9.5
+ENABLE_KERNELSU=true
+KERNELSU_REPO=lightsummer233/KernelSU
+KERNELSU_TAG=non-gki
 KSU_EXPECTED_SIZE=
 KSU_EXPECTED_HASH=
 
@@ -51,15 +51,15 @@ EXTRA_ENV=false
 
 # AnyKernel3
 ## AnyKernel3 Custom
-USE_CUSTOM_ANYKERNEL3=false
-CUSTOM_ANYKERNEL3_SOURCE=
-CUSTOM_ANYKERNEL3_BRANCH=
+USE_CUSTOM_ANYKERNEL3=true
+CUSTOM_ANYKERNEL3_SOURCE=https://github.com/bxySo/AnyKernel3
+CUSTOM_ANYKERNEL3_BRANCH=alioth
 
 # Ccache
 ENABLE_CCACHE=true
 
 # DTBO image
-NEED_DTBO=false
+NEED_DTBO=true
 
 # Build boot images
 BUILD_BOOT_IMG=false
