config: Switch to the AOSP clang r536225

--- a/config.env
+++ b/config.env
@@ -10,7 +10,7 @@ EXTRA_CMDS:LD=ld.lld LLVM=1 LLVM_IAS=1
 
 # Clang
 ## Custom
-USE_CUSTOM_CLANG=true
+USE_CUSTOM_CLANG=false
 CUSTOM_CLANG_SOURCE=$(curl -LSs https://raw.githubusercontent.com/ZyCromerZ/Clang/main/Clang-main-link.txt)
 CUSTOM_CLANG_BRANCH=
 
@@ -18,8 +18,8 @@ CUSTOM_CLANG_BRANCH=
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 
 ## AOSP
-CLANG_BRANCH=master-kernel-build-2022
-CLANG_VERSION=r450784e
+CLANG_BRANCH=master
+CLANG_VERSION=r536225
 
 # GCC
 ENABLE_GCC_ARM64=true
