--- a/config.env
+++ b/config.env
@@ -34,7 +34,7 @@ CUSTOM_GCC_32_BRANCH=
 CUSTOM_GCC_32_BIN=arm-linux-androideabi-
 
 # KernelSU flags
-ENABLE_KERNELSU=true
+ENABLE_KERNELSU=false
 KERNELSU_REPO=lightsummer233/KernelSU
 KERNELSU_TAG=non-gki
 KSU_EXPECTED_SIZE=
